--- a/src/main/webapp/restbucks.html
+++ b/src/main/webapp/restbucks.html
@@ -62,22 +62,26 @@ and open the template in the editor.
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="hero-unit">
-                    <h1>RESTBucks Information</h1>
-                    <p>Hypermedia for RESTBucks model, used as Domain Application protocol ...</p>
-                    <p><a class="btn btn-primary btn-large">Learn more ...</a></p>
+                    <h1>RESTBucks</h1>
+                    <p>RESTful HTTP example for coffee orders, barrista, payment and receipt processing. Hypermedia for RESTBucks model, used as Domain Application protocol ...</p>
+                    <p><a href="https://github.com/pgrund/restbucks" class="btn btn-primary btn-large">go to sources ...</a></p>
                 </div>
                 <div class="row-fluid">
                     <div class="span4">
+                        <a id="relation-self"></a>
                         <h2>Self</h2>
                         <p>....</p>
                         <p><a class="btn" href="#">top</a></p>
                     </div>
                     <div class="span4">
+                        <a id="relation-cancel"></a>
                         <h2>Cancel</h2>
                         <p>....</p>
+                        <button onclick="deleteOrder();">delete</button>
                         <p><a class="btn" href="#">top</a></p>
                     </div>
-                   <div class="span4">
+                    <div class="span4">
+                        <a id="relation-update"></a>
                         <h2>Update</h2>
                         <p>....</p>
                         <p><a class="btn" href="#">top</a></p>
@@ -85,11 +89,13 @@ and open the template in the editor.
                 </div>
                 <div class="row-fluid">
                     <div class="span4">
+                        <a id="relation-pay"></a>
                         <h2>Payment</h2>
                         <p>....</p>
                         <p><a class="btn" href="#">top</a></p>
                     </div>
                     <div class="span4">
+                        <a id="relation-receipt"></a>
                         <h2>Receipt</h2>
                         <p>....</p>
                         <p><a class="btn" href="#">top</a></p>
@@ -114,6 +120,5 @@ and open the template in the editor.
         <script src="/js/bootstrap-collapse.js"></script>
         <script src="/js/bootstrap-carousel.js"></script>
         <script src="/js/bootstrap-typeahead.js"></script>
-
     </body>
 </html>
