--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -125,7 +125,7 @@
                         $('#items').append(nameTmpl(idx, item.name));
                         $('#items').append(milkTmpl(idx, item.milk));
                         $('#items').append(sizeTmpl(idx, item.size));
-                        $('#items').append(shotTmpl(idx, item.shot));
+                        $('#items').append(shotTmpl(idx, item.shots));
                     });
                     
                 });
