--- a/src/main/resources/static/restbucks.html
+++ b/src/main/resources/static/restbucks.html
@@ -1,24 +1,19 @@
-<?xml version="1.0" encoding="MacRoman"?>
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>RESTBucks - Relation Specification</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>RESTBucks - RESTful Coffee Ordering</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="information about single RESTBucks order"/>
         <meta name="author" content="RESTBucks system"/>
 
-        <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+        <!-- HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <!-- Le styles -->
-        <link href="/css/bootstrap.css" rel="stylesheet"/>
+        <!-- styles -->
+        <link href="/css/bootstrap.min.css" rel="stylesheet"/>
         <style type="text/css">
             body {
                 padding-top: 60px;
@@ -29,80 +24,130 @@ and open the template in the editor.
             }
         </style>
         <link href="/css/bootstrap-responsive.css" rel="stylesheet"/>
-
-        <!-- Le fav and touch icons -->
-        <link rel="shortcut icon" href="/images/favicon.ico"/>
-        <link rel="apple-touch-icon" href="/images/apple-touch-icon.png"/>
-        <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png"/>
-        <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png"/>
-    </head>
-
     <body>
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <nav class="navbar navbar-fixed-top navbar-inverse">            
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="#">RESTBucks</a>
-                    <div class="nav-collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="#">Info</a></li>
-                            <li><a href="#model">Model</a></li>
-                            <li><a href="#hypermedia">Hypermedia</a></li>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <span class="icon-bar"></span>
+                        RESTBucks</a>
+                </div>
+                <div class="nav-collapse" id="navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="/restbucks.html#">Info</a>
+                        </li>
+                        <li>
+                            <a href="/restbucks.html#model">Model</a>
+                        </li>
+                        <li>
+                            <a href="/restbucks.html#hypermedia">Hypermedia</a>
+                        </li>
+                    </ul>
+                    <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+        <div class="container-fluid">
+            <div id="messagebox"></div>
+
+            <div class="row" id="order">
+                <div class="span2">
+                    <div class="well sidebar-nav">
+                        <ul class="nav nav-list">
+                            <li class="nav-header">RESTBucks</li>      
+                            <li class="divider" role="seperator"></li>
+                            <li>
+                                <a href="/">new order</a>
+                            </li>
+                            <li class="divider" role="seperator"></li>
+                            <li class="nav-header">
+                                <a href="https://github.com/pgrund/restbucks">source</a>
+                            </li>
                         </ul>
-                        <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
-                    </div><!--/.nav-collapse -->
+                    </div><!--/.well -->
+                </div><!--/span-->
+                <div class="span10">
+                    <div class="jumbotron">
+                        <h2>RESTBucks Order <span id="orderid"></span></h2>
+                        <form id="updateOrder" class="form-horizontal" role="form">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Location</label>
+                                <label class="radio-inline"> 
+                                    <input type="radio" name="location" value="IN_SHOP" required> in shop 
+                                </label>
+                                <label class="radio-inline"> 
+                                    <input type="radio" name="location" value="TAKE_AWAY" required> take away 
+                                </label>
+                            </div>
+                            <fieldset id="items">
+                                <legend>Items</legend>
+
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="items[0].quantity">Quantity</label>
+                                    <div class="col-sm-2">
+                                        <input type="number" class="form-control" min="1" name="items[0].quantity" id="0_quantity" value="0"/>
+                                    </div>
+                                </div> 
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="items[0].name">Name</label>
+                                    <div class="col-sm-3">
+                                        <select name="items[0].name" id="0_name" class="form-control">
+                                            <option value="CAPUCCINO" selected="selected">Cappuccino</option>
+                                            <option value="LATTE">Latte</option>
+                                            <option value="ESPRESSO">Espresso</option>
+                                            <option value="FLAT_WHITE">Flat White</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="items[0].milk">Milk</label>
+                                    <div class="col-sm-3">
+                                        <select name="items[0].milk" id="0_milk" class="form-control">
+                                            <option value="SEMI" selected="selected">semi milk</option>
+                                            <option value="SKIM">skim milk</option>
+                                            <option value="WHOLE">whole milk</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="items[0].size">Size</label>
+                                    <div class="col-sm-3">
+                                        <select name="items[0].size" id="0_size" class="form-control">
+                                            <option value="SMALL">small</option>
+                                            <option value="MEDIUM" selected="selected">medium</option>
+                                            <option value="LARGE">large</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label" for="items[0].shots">Shot</label>
+                                    <div class="col-sm-3">
+                                        <select name="items[0].shots" id="0_shots" class="form-control">
+                                            <option value="SINGLE" selected="selected">single</option>
+                                            <option value="DOUBLE">double</option>
+                                            <option value="TRIPLE">triple</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="hero-unit">
-                    <h1>RESTBucks</h1>
-                    <p>RESTful HTTP example for coffee orders, barrista, payment and receipt processing. Hypermedia for RESTBucks model, used as Domain Application protocol ...</p>
-                    <p><a href="https://github.com/pgrund/restbucks" class="btn btn-primary btn-large">go to sources ...</a></p>
-                </div>
-                <div class="row-fluid">
-                    <div class="span4">
-                        <a id="relation-self"></a>
-                        <h2>Self</h2>
-                        <p>....</p>
-                        <p><a class="btn" href="#">top</a></p>
-                    </div>
-                    <div class="span4">
-                        <a id="relation-cancel"></a>
-                        <h2>Cancel</h2>
-                        <p>....</p>
-                        <button onclick="deleteOrder();">delete</button>
-                        <p><a class="btn" href="#">top</a></p>
-                    </div>
-                    <div class="span4">
-                        <a id="relation-update"></a>
-                        <h2>Update</h2>
-                        <p>....</p>
-                        <p><a class="btn" href="#">top</a></p>
-                    </div>
-                </div>
-                <div class="row-fluid">
-                    <div class="span4">
-                        <a id="relation-pay"></a>
-                        <h2>Payment</h2>
-                        <p>....</p>
-                        <p><a class="btn" href="#">top</a></p>
-                    </div>
-                    <div class="span4">
-                        <a id="relation-receipt"></a>
-                        <h2>Receipt</h2>
-                        <p>....</p>
-                        <p><a class="btn" href="#">top</a></p>
-                    </div>
-                </div><!--/row-->
-            </div><!--/span-->
-        </div><!--/container-->
+            <div class="progress" id="test1">
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">0%</div>                    
+            </div>
+            <button id="test">test</button>
+        </div>
 
         <!-- Le javascript
         ================================================== -->
@@ -120,5 +165,30 @@ and open the template in the editor.
         <script src="/js/bootstrap-collapse.js"></script>
         <script src="/js/bootstrap-carousel.js"></script>
         <script src="/js/bootstrap-typeahead.js"></script>
+        <script type="text/javascript">
+            $(function () {
+                $("#test").click(function () {
+                    console.log("start test");
+                    var t = setInterval(function () {                             
+                        $('#test1 .progress-bar').each(function () {
+                            var next = (parseInt($(this).attr("aria-valuenow"))+ 10) % 100;                           
+                            $(this).attr("aria-valuenow", next)
+                                  .css("width", next + "%")
+                                  .text( next + "%");
+                          });
+                        }, 500);
+                    
+
+                    window.setTimeout(function () {
+                        console.log("set timeout");
+                        clearInterval(t);
+                         $('#test1').hide();
+                        console.log("..done");
+                    }, 5000);
+
+
+                });
+            });
+        </script>
     </body>
 </html>
